# passman

./: CMakeLists.txt  README.md  TODO  build.sh  cmake_setup.sh  install.lua  run.sh  uninstall.lua
blob/: help.txt
cmake/: CompilerWarnings.cmake
lib/sqlite/: CMakeLists.txt
resource/: help_message.txt  passman.bash  passman.fish  passman_conf.lua
src/: CalendarTime.cpp  CalendarTime.hpp  DebugMsg.hpp  LuaConfigFile.cpp  LuaConfigFile.hpp  PassmanDB.cpp  PassmanDB.hpp  PassmanFatalError.hpp  Password.cpp  Password.hpp  PasswordInfo.hpp  RGB.hpp  SQliteDB.cpp  SQliteDB.hpp  TerminalColor.cpp  TerminalColor.hpp  TerminalUtils.cpp  TerminalUtils.hpp  check.hpp  createFile.hpp  generateRandomPassword.hpp  getHomePath.hpp  main.cpp  readFile.hpp  sqlite_return.c  sqlite_return.cpp  sqlite_return.h  sqlite_return.hpp
src/passman/: CredentialsSource.cpp  CredentialsSource.hpp  Settings.hpp  err_msg.hpp  main.cpp  println.cpp  println.hpp
src/passman/cmdline/: parse_arguments.cpp  parse_arguments.hpp
src/passman/cmdline/function/: OverloadingSet.hpp  identifiers.hpp
src/passman/fs/: cd_to_appdata_dir.cpp  cd_to_appdata_dir.hpp  get_home_path.cpp  get_home_path.hpp  is_empty.cpp  is_empty.hpp  touch_appdata_dir.cpp  touch_appdata_dir.hpp
src/sqlite/: Data.cpp  Data.hpp  DataBase.cpp  DataBase.hpp  DataBaseContext.cpp  DataBaseContext.hpp  ErrCode.hpp  StaticData.hpp
src/sqlite/error/: Code.hpp  to_str.cpp  to_str.hpp
src/sqlite/impl/: DataBaseContext.cpp  DataBaseContext.hpp  Data_tag.hpp
src/util/: ExitCode.hpp  TerminalPrinter.cpp  TerminalPrinter.hpp  debugMsg.hpp  fcheck.hpp  have_operator_curl_braces.hpp  lazy.hpp  newl.hpp
